k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: stockexchange
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
